log

Thu 14 Mar 2024 02:47:30 PM UTC: 
 exercises.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:16:28: error: expected ‘(’ before ‘arr’
   16 |                         if arr[i] >= mayor
      |                            ^~~
      |                            (
exercises.c:16:31: error: statement with no effect [-Werror=unused-value]
   16 |                         if arr[i] >= mayor
      |                            ~~~^~~
exercises.c: In function ‘reverseArray’:
exercises.c:33:1: error: expected expression before ‘}’ token
   33 | }
      | ^
exercises.c:29:13: error: unused variable ‘temp’ [-Werror=unused-variable]
   29 |         int temp;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
9986333
Thu 14 Mar 2024 02:48:37 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:28: error: expected ‘(’ before ‘arr’
   17 |                         if arr[i] >= mayor
      |                            ^~~
      |                            (
exercises.c:17:31: error: statement with no effect [-Werror=unused-value]
   17 |                         if arr[i] >= mayor
      |                            ~~~^~~
exercises.c: In function ‘reverseArray’:
exercises.c:35:1: error: expected expression before ‘}’ token
   35 | }
      | ^
exercises.c:31:13: error: unused variable ‘temp’ [-Werror=unused-variable]
   31 |         int temp;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
982f2e1
Thu 14 Mar 2024 02:49:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:28: error: expected ‘(’ before ‘arr’
   17 |                         if arr[i] >= mayor
      |                            ^~~
      |                            (
exercises.c:17:31: error: statement with no effect [-Werror=unused-value]
   17 |                         if arr[i] >= mayor
      |                            ~~~^~~
exercises.c: In function ‘reverseArray’:
exercises.c:31:13: error: unused variable ‘temp’ [-Werror=unused-variable]
   31 |         int temp;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
ee03801
Thu 14 Mar 2024 02:49:30 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:28: error: expected ‘(’ before ‘arr’
   17 |                         if arr[i] >= mayor
      |                            ^~~
      |                            (
exercises.c:17:31: error: statement with no effect [-Werror=unused-value]
   17 |                         if arr[i] >= mayor
      |                            ~~~^~~
exercises.c: In function ‘reverseArray’:
exercises.c:31:13: error: unused variable ‘temp’ [-Werror=unused-variable]
   31 |         int temp;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
8c8aa4f
Thu 14 Mar 2024 02:49:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:13: error: unused variable ‘temp’ [-Werror=unused-variable]
   31 |         int temp;
      |             ^~~~
exercises.c:33:28: error: ‘cpySize’ is used uninitialized [-Werror=uninitialized]
   33 |         for (int i = 0 ; i < cpySize ; i++)
      |                          ~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e96815a
Thu 14 Mar 2024 02:52:37 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
0baf859
Thu 14 Mar 2024 02:53:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d0a238f
Thu 14 Mar 2024 02:54:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
43616bc
Thu 14 Mar 2024 02:55:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8871321
Thu 14 Mar 2024 02:55:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
ac5afc4
Thu 14 Mar 2024 02:58:39 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
a881f58
Thu 14 Mar 2024 02:59:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
005d77e
Thu 14 Mar 2024 03:01:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cfa7078
Thu 14 Mar 2024 03:01:53 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c7c79c6
